[gd_scene load_steps=2 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]

[node name="Player" type="VBoxContainer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_right = 79.0
margin_bottom = 14.0
text = "player name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
margin_top = 18.0
margin_right = 79.0
margin_bottom = 32.0
text = "$1000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 36.0
margin_right = 79.0
margin_bottom = 50.0
text = "Stocks:"

[node name="Stock" type="HBoxContainer" parent="."]
margin_top = 54.0
margin_right = 79.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RedStock" type="Label" parent="Stock"]
margin_right = 16.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "22"

[node name="BlueStock" type="Label" parent="Stock"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.027451, 0, 1, 1 )
text = "22"

[node name="GreenStock" type="Label" parent="Stock"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 1, 0.294118, 1 )
text = "22"

[node name="YellowStock" type="Label" parent="Stock"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.992157, 1, 0, 1 )
text = "22"
